docs/style.css
.c {
  text-align: left;
}

.cc {
  text-align: center;
}

button,
h1,
h2,
h3,
h4,
h5,
h6,
li,
p {
  font-family: 'Raleway', sans-serif;
}

